--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,10 +60,36 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.orm.query.Query at 0x7fc3e976b410>"
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fc4115d9290>,\n",
+       " 'station': 'USC00519397',\n",
+       " 'date': '2010-01-01',\n",
+       " 'tobs': 65.0,\n",
+       " 'id': 1,\n",
+       " 'prcp': 0.08}"
       ]
      },
      "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first = session.query(Measurement).first()\n",
+    "first.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.orm.query.Query at 0x7fc4115872d0>"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
