--- a/Hawaii_Climate_Analysis.ipynb
+++ b/Hawaii_Climate_Analysis.ipynb
@@ -2,24 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import datetime as dt\n",
     "\n",
     "# Python SQL toolkit and Object Relational Mapper\n",
     "import sqlalchemy\n",
     "from sqlalchemy.ext.automap import automap_base\n",
     "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, func"
+    "from sqlalchemy import create_engine, func\n",
+    "\n",
+    "# matplotlib dependencies \n",
+    "%matplotlib inline\n",
+    "from matplotlib import style\n",
+    "style.use('fivethirtyeight')\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Connect to SQLite"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +68,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fc4115d9290>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x7fc493501950>,\n",
        " 'station': 'USC00519397',\n",
-       " 'date': '2010-01-01',\n",
+       " 'prcp': 0.08,\n",
        " 'tobs': 65.0,\n",
        " 'id': 1,\n",
-       " 'prcp': 0.08}"
+       " 'date': '2010-01-01'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.orm.query.Query at 0x7fc4115872d0>"
+       "<sqlalchemy.orm.query.Query at 0x7fc494220050>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1127,7 @@
        " ...]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1180,59 +1194,20 @@
        "      <td>2010-06-05</td>\n",
        "      <td>77.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1695</th>\n",
-       "      <td>2017-06-26</td>\n",
-       "      <td>79.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1696</th>\n",
-       "      <td>2017-06-27</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1697</th>\n",
-       "      <td>2017-06-28</td>\n",
-       "      <td>74.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1698</th>\n",
-       "      <td>2017-06-29</td>\n",
-       "      <td>76.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1699</th>\n",
-       "      <td>2017-06-30</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1700 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      June Dates  Temperature\n",
-       "0     2010-06-01         78.0\n",
-       "1     2010-06-02         76.0\n",
-       "2     2010-06-03         78.0\n",
-       "3     2010-06-04         76.0\n",
-       "4     2010-06-05         77.0\n",
-       "...          ...          ...\n",
-       "1695  2017-06-26         79.0\n",
-       "1696  2017-06-27         74.0\n",
-       "1697  2017-06-28         74.0\n",
-       "1698  2017-06-29         76.0\n",
-       "1699  2017-06-30         75.0\n",
-       "\n",
-       "[1700 rows x 2 columns]"
+       "   June Dates  Temperature\n",
+       "0  2010-06-01         78.0\n",
+       "1  2010-06-02         76.0\n",
+       "2  2010-06-03         78.0\n",
+       "3  2010-06-04         76.0\n",
+       "4  2010-06-05         77.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,12 +1215,12 @@
    "source": [
     "# 4. Create a DataFrame from the list of temperatures for the month of June. \n",
     "df_june = pd.DataFrame(results, columns=[\"June Dates\", \"Temperature\"])\n",
-    "df_june"
+    "df_june.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1296,7 @@
        "max      85.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,6 +1305,27 @@
     "# 5. Calculate and print out the summary statistics for the June temperature DataFrame.\n",
     "df_june.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
